Allow manual refactoring insertion via API
